# CCDT

./: CMakeLists.txt  README.md  bezier.h  main.cpp  mainwindow.ui
include/: bezier.h  glwidget.h  helper.h  mainwindow.h  refinement.h  variational.h  vec2.h
src/: bezier.cpp  glwidget.cpp  helper.cpp  main.cpp  mainwindow.cpp  refinement.cpp  variational.cpp
